--- a/templates/cities.html
+++ b/templates/cities.html
@@ -3,9 +3,11 @@
    <div>
       <div ng-repeat="weather in weather">
           <h2>How's the weather in {{ weather.name }}?</h2>
-          <p>Current Conditions: {{ weather.weather[0].description | TitleCase }}</p>
-          <p>Current Temperature (F): {{ weather.main.temp | fahrenheit }} Degrees</p>
-      </div>
+          <p>Current Conditions: {{ weather.weather[0].description | TitleCase }} <img ng-src="http://openweathermap.org/img/w/{{ weather.weather[0].icon }}.png" id="icon"/></p>
+          <p>Current Temperature: {{ weather.main.temp | fahrenheit }} &#176;F</p>
+        <div class="slider" ng-repeat="img in images track by $index">
+      <img ng-src= "{{ img.display_sizes[0].uri }}" />
+        </div>
        
    </div>
 </div>
