Map Loading on Home Screen - Resource and SCSS Folders Added

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,11 @@
                 <input type="text" id="search-box" />
                 <input type="submit" id="submit-btn" />
             </form>
+            
+            <div class="container">
+                <div svg-map></div>
+            </div>
+            
         </div>
     </div>
 </div>
