Hover States Working on States Map -> Classes and IDs set -> Working on dom element ID pass back

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,11 @@ body {
     width: 60px;
 }
 
-mapContainer {
+.mapContainer {
     height: 600px;
     width: 600px;
+}
+.state:hover {
+    stroke-width: 2;
+    stroke: blue;   
 }
