Routes Working -> Router Accepting ng-click stateId -> routeParams delivering to Factory

--- a/templates/states.html
+++ b/templates/states.html
@@ -16,12 +16,12 @@
             <img ng-src="img/{{image.src}}"/>
         </div>
         
-        <div class="arrows">
+        <!--div class="arrows">
             <a href="#" ng-click="prev()">
                 <img src="img/left-arrow.png"/></a> 
             <a href="#" ng-click="next()">
                 <img src="img/right-arrow.png"/></a>
-        </div>    
+        </div-->    
     </div>
     
 </div>
