Small work to Images API call to incorporate state routeParam Also out of curiousity added titles to images on state view from api

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,5 +13,6 @@ body {
 .state:hover {
     cursor: crosshair;
     stroke-width: 2;
-    stroke: blue;   
+    stroke: blue;
+    fill: yellow;
 }
