--- a/templates/states.html
+++ b/templates/states.html
@@ -3,14 +3,10 @@
     
     <div class="slider" ng-repeat="img in images track by $index">
         <img ng-src= "{{ img.display_sizes[0].uri }}" />
-
-<!--
-    <button class="prev">&#60;</button> 
-    <button class="next">&#62;</button>
---> 
-        
+        <p> {{ img.title }} </p>        
     </div>
     
+<!--- ????? -------------------------->    
     <div class="slider">
         <div class="slide" ng-repeat="image in images" ng-show="image.visible">
             <img ng-src="img/{{image.src}}"/>
@@ -21,6 +17,9 @@
                 <img src="img/left-arrow.png"/></a> 
             <a href="#" ng-click="next()">
                 <img src="img/right-arrow.png"/></a>
+
+
+
         </div-->    
     </div>
     
