--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,6 @@
 <div id="homeview">
     <div class="mapContainer">
-        <div svg-map></div>
-    </div>
-    
-    <div>
-        <h2>Enter your state</h2>
-        <form>
-            <input type="text" id="search-box" />
-            <input type="submit" id="submit-btn" />
-        </form>
+        <h2>{{ display }}</h2>
+        <div svg-world></div>
     </div>
 </div>
