--- a/templates/states.html
+++ b/templates/states.html
@@ -1,4 +1,8 @@
 <div class="wrapper">
+    <div class="mapContainer">
+        <h2>{{ display }}</h2>
+        <div svg-state></div>
+    </div>
     <h2>Simple image slider</h2>
     
     <div class="slider" ng-repeat="img in images track by $index">
