--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 <div id="homeview">
-    <div class="mapContainer">
-        <h2>{{ display }}</h2>
-        <div svg-world></div>
+    <div class="polaroid">
+        <div class="frame">
+            <div svg-world></div>
+        </div>
+        <h2 class="display">{{ display }}</h2>
     </div>
 </div>
