--- a/templates/states.html
+++ b/templates/states.html
@@ -1,27 +1,36 @@
-<div class="wrapper">
-    <h2>Simple image slider</h2>
-    
-    <div class="slider" ng-repeat="img in images track by $index">
-        <img ng-src= "{{ img.display_sizes[0].uri }}" />
+<div ng-repeat="history in weatherHistory">
+    <p>On {{ history[0].date }},</p>
+    <p>there was a high of: {{ history[0].maxtempF }} &#176;F</p>
+    <p>there was a low of: {{ history[0].mintempF }} &#176;F</p>
+</div>
 
-<!--
-    <button class="prev">&#60;</button> 
-    <button class="next">&#62;</button>
---> 
-        
+
+<canvas id="myChart" width="740" height="200"></canvas>
+
+
+<!-- BOOTSTRAP CAROUSEL-->
+<div class="container carousel-fade">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
+          <img ng-src= "{{ img.display_sizes[0].uri }}" />
     </div>
-    
-    <div class="slider">
-        <div class="slide" ng-repeat="image in images" ng-show="image.visible">
-            <img ng-src="img/{{image.src}}"/>
-        </div>
-        
-        <!--div class="arrows">
-            <a href="#" ng-click="prev()">
-                <img src="img/left-arrow.png"/></a> 
-            <a href="#" ng-click="next()">
-                <img src="img/right-arrow.png"/></a>
-        </div-->    
-    </div>
-    
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
