--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
-<div id="homeview">
+<div class="homeview">
+    <div class="pin"></div>
     <div class="polaroid">
         <div class="frame">
             <div svg-world></div>
         </div>
-        <h2 class="display">{{ display }}</h2>
+        <h2 class="display"> {{ display }} </h2>
     </div>
 </div>
