--- a/templates/states.html
+++ b/templates/states.html
@@ -1,13 +1,16 @@
-<div class="wrapper">
-    <div class="mapContainer">
-        <h2>{{ display }}</h2>
-        <div svg-state></div>
+<div class="stateview">
+    <div class="pin"></div>
+    <div class="polaroid">
+        <div class="frame">
+            <img svg-state />
+            <div svg-state></div>
+        </div>
+        <h2 class="display"> {{ display }}</h2>
     </div>
-    <h2>Simple image slider</h2>
     
+    <h2>Simple image slider</h2>
     <div class="slider" ng-repeat="img in images track by $index">
         <img ng-src= "{{ img.display_sizes[0].uri }}" />
         <p> {{ img.title }} </p>        
-    </div>
-    
+    </div> 
 </div>
