--- a/templates/states.html
+++ b/templates/states.html
@@ -1,36 +1,9 @@
+<h2>Current Conditions</h2>
+
 <div ng-repeat="history in weatherHistory">
-    <p>On {{ history[0].date }},</p>
-    <p>there was a high of: {{ history[0].maxtempF }} &#176;F</p>
-    <p>there was a low of: {{ history[0].mintempF }} &#176;F</p>
+    <p>Temp: {{ history.current_condition[0].temp_F }}&#176;F, {{ history.current_condition[0].weatherDesc[0].value }}  </p>
+    <p>{{ history.current_condition[0].FeelsLikeF }} &#176;F</p>
+    <p>{{ history.current_condition[0].humidity }}%</p>
 </div>
 
 
-<canvas id="myChart" width="740" height="200"></canvas>
-
-
-<!-- BOOTSTRAP CAROUSEL-->
-<div class="container carousel-fade">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <div class="carousel-inner" role="listbox">
-      <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
-          <img ng-src= "{{ img.display_sizes[0].uri }}" />
-    </div>
-
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
