--- a/templates/cities.html
+++ b/templates/cities.html
@@ -17,3 +17,35 @@
         
     </div>
 </div>
+
+<h2>Average High + Average Lows (Each Month)</h2>
+<canvas id="myChart" width="740" height="200"></canvas>
+
+
+<!-- BOOTSTRAP CAROUSEL-->
+<div class="container carousel-fade">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
+          <img ng-src= "{{ img.display_sizes[0].uri }}" />
+    </div>
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    </div>
+    </div>
+</div>
