--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,12 @@
 <div class="homeview">
-    <div class="pin"></div>
     <div class="polaroid">
         <div class="frame">
             <div svg-world></div>
         </div>
-        <h2 class="display"> {{ display }} </h2>
     </div>
+    <h1 class="display">{{ display }}</h1>
+    
+    <div class="pin"></div>
+    
+    <img class="clip-ocean" src="../resource/water.jpg">
 </div>
