--- a/templates/states.html
+++ b/templates/states.html
@@ -1,12 +1,10 @@
 <div class="stateview">
-    <div class="pin"></div>
     <div class="polaroid">
-        <div class="frame">
-            <img svg-state />
-            <div svg-state></div>
-        </div>
-        <h2 class="display"> {{ display }}</h2>
+        <div class="frame" svg-state></div>
     </div>
+    <h1 class="display">{{ display }}</h1>
+    
+    <div class="pin"></div>
     
     <h2>Simple image slider</h2>
     <div class="slider" ng-repeat="img in images track by $index">
