--- a/templates/states.html
+++ b/templates/states.html
@@ -1,14 +1,41 @@
-<div class="stateview">
-    <div class="polaroid">
-        <div class="frame" svg-state></div>
+<div class="polaroid">
+    <div class="frame" svg-state></div>
+</div>
+<h1 class="display">{{ display }}</h1>
+    
+<div class="pin"></div>
+    
+<!--h2>Simple image slider</h2>
+<div class="slider" ng-repeat="img in images track by $index">
+    <img ng-src= "{{ img.display_sizes[0].uri }}" />
+    <p> {{ img.title }} </p>        
+</div--> 
+
+
+<!-- BOOTSTRAP CAROUSEL-->
+<div class="container carousel-fade">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
+          <img ng-src= "{{ img.display_sizes[0].uri }}" />
     </div>
-    <h1 class="display">{{ display }}</h1>
-    
-    <div class="pin"></div>
-    
-    <h2>Simple image slider</h2>
-    <div class="slider" ng-repeat="img in images track by $index">
-        <img ng-src= "{{ img.display_sizes[0].uri }}" />
-        <p> {{ img.title }} </p>        
-    </div> 
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    </div>
+    </div>
 </div>
