--- a/templates/states.html
+++ b/templates/states.html
@@ -2,40 +2,55 @@
     <div class="frame" svg-state></div>
 </div>
 <h1 class="display">{{ display }}</h1>
-    
+<img src="../resource/paper.png" class="paper">    
 <div class="pin"></div>
-    
-<!--h2>Simple image slider</h2>
-<div class="slider" ng-repeat="img in images track by $index">
-    <img ng-src= "{{ img.display_sizes[0].uri }}" />
-    <p> {{ img.title }} </p>        
-</div--> 
 
+<div class="black">
+    <img src="../resource/polaroid-collage.png" class="collage">
+    <img ng-src="{{images[1].display_sizes[0].uri}}" class="svg-clip" id="solo">
+</div>
+<svg class="clip-svg">
+    <defs>
+        <clipPath id="clip-polygon" clipPathUnits="objectBoundingBox" >
+            <polygon points=".04 .21, .22 .15, .23 .05, .49 .18, .62 .16, .76 .25, .90 .19, .95 .80, .75 .88, .60 .78, .44 .82, .34 .76, .09 .84"/>
+        </clipPath>
+    </defs>
+</svg>
 
 <!-- BOOTSTRAP CAROUSEL-->
-<div class="container carousel-fade">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <div class="carousel-inner" role="listbox">
-      <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
-          <img ng-src= "{{ img.display_sizes[0].uri }}" />
+<!--div class="container carousel-fade"><br-->
+    
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!--ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol-->
+        
+        <!--div class="carousel-inner" role="listbox">
+            <div class="item" ng-class="{active:!$index}" ng-repeat="img in images">
+                <img ng-src= "{{ img.display_sizes[0].uri }}" class="svg-clip"/>
+            </div>
+            <!--a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a-->
+            <!--a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a-->
+        <!--/div>
+        <svg class="clip-svg" style="stroke:blue;stroke-width:2;">
+            <defs>
+                <clipPath id="clip-polygon" clipPathUnits="objectBoundingBox" >
+                    <polygon points=".09 .76, .055 .23, .285 .16, .32 .68" />
+                    <polygon points=".235 .126, .24 .079, .468 .195, .418 .716, .342 .677, .304 .105"/>
+                    <polygon points=".434 .755, .493 .202, .597 .178, .626 .711"/>
+                    <polygon points=".65 .766, .618 .189, .796 .3, .732 .817"/>
+                    <polygon points=".754 .813, .825 .27, .79 .252, .89 .216, .936 .74"/>
+                </clipPath>
+            </defs>
+        </svg>
     </div>
-
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    </div>
-    </div>
-</div>
+</div-->
