--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     //margin: auto;
-    //padding: auto;
+    padding-bottom: 50px;
 }
 
 div {
@@ -15,6 +15,7 @@ div {
     padding: 0;
 
 }
+/// doesn't do currently
 .wrapper1 {
     margin: auto;
     border: 3px solid pink;
@@ -30,8 +31,8 @@ div {
     box-shadow: 3px 3px 14px 2px rgba(0,0,0,0.75);
     height: 550px;
     width: 550px;
-    margin: auto;
-    
+    //margin: auto;
+    margin-left: 3%;
     //border: 2px solid blue;
 }
 
@@ -56,20 +57,23 @@ div {
     padding-bottom: 25px;
     color: black;
     width: 550px;
-    margin: auto;
-    
+    //margin: auto;
+    margin-top: 0;
+    margin-left: 3%;
     //border: 2px solid red;
     box-shadow: 3px 3px 14px 2px rgba(0,0,0,0.75);
 }
 
 .pin {
-    position: relative;
-    top: -645px;
+    position: absolute;
     background-image: url('../resource/pin.png');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 50px; 
-    margin-left: 46.5%;
+    height: 50px;   
+}
+.no1 {
+    top: -545px;
+    margin-left: 25%;
 }
 
 
@@ -146,20 +150,82 @@ div {
 .River{}
 //<= END SVG MAP RULES 
 
-//=> CSS RULES BELOW FOR IMAGE CAROUSEL
+.test {
+    //height: 355.5px;
+    //width: 900px;
+}
+
+.svg-clip {
+    -webkit-clip-path: url("#clip-polygon");
+    clip-path: url("#clip-polygon");
+}
+
+//.nav, .pagination, .carousel, .panel-title a { //cursor: pointer; }
+.paper {
+    height: 400px;
+    width: 800px;
+    position: absolute;
+    top: 20px;
+    right: 0px;
+}
+
+
+.black {
+    background-color: black;
+}
+
+.collage {
+    //position: absolute;
+    top: 200;
+    height: 355.5px !important;
+    width: 900px !important;
+    position: absolute;
+    top: 300px;
+    z-index: 2;
+    right: -10px;
+}
+#solo {
+    height: 355.5px;
+    width: 900px;
+    border: 1px solid purple;
+    position: absolute;
+    top: 300px;
+    right: -10px;
+}
+
+//// BOOTSTRAP UI CAROUSEL
+#slides_control > div{
+
+    border: 5px solid red;
+}
+
+#slides_control {
+    
+    border: 5px solid blue;
+}
+
+/*/=> CSS RULES BELOW FOR IMAGE CAROUSEL
+.carousel {
+    height: 355.5px;
+    width: 900px; 
+}
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     width: 100%;
-    height: 50%;
+    height: 100%;
     margin: auto;
 }
 div.item {
-    height: 600px;
+    //height: 600px;
+    border: 5px solid cyan;
 }
 
 .carousel-fade {
+    //height: 300px;
+    border: 5px solid red;
     .carousel-inner {
         .item {
+            //height: 300px;
             transition-property: opacity;
         }
 
@@ -167,12 +233,14 @@ div.item {
         .active.left,
         .active.right {
             opacity: 0;
+            
         }
 
         .active,
         .next.left,
         .prev.right {
             opacity: 1;
+            
         }
 
         .next,
@@ -181,6 +249,7 @@ div.item {
         .active.right {
             left: 0;
             transform: translate3d(0, 0, 0);
+            display: none;
         }
     }
 
@@ -188,3 +257,5 @@ div.item {
         z-index: 2;
     }
 }
+
+*/
