--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 body {
     display: block;
     //font-family: 'Open Sans', sans-serif;
-    background-image: url('../resource/cork.jpg');
+//    background-image: url('../resource/cork.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     //margin: auto;
