--- a/templates/cities.html
+++ b/templates/cities.html
@@ -7,19 +7,22 @@
             <p>Current Conditions: {{ weather.weather[0].description | TitleCase }}
                 <img ng-src="http://openweathermap.org/img/w/{{ weather.weather[0].icon }}.png" id="icon"/>
             </p>
-            
+    
             <p>Current Temperature: {{ weather.main.temp | fahrenheit }} &#176;F</p>
-            
-            <div class="slider" ng-repeat="img in images track by $index">
-                <img ng-src= "{{ img.display_sizes[0].uri }}" />
-            </div>
         </div>
         
     </div>
 </div>
 
-<h2>Average High + Average Lows (Each Month)</h2>
+<h2>Highest Temp. Ever Recorded + Average Lows (For Each Month)</h2>
 <canvas id="myChart" width="740" height="200"></canvas>
+
+
+<h2>In Need Of A Hotel?</h2>
+<div ng-repeat="event in events track by $index">
+    <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#safe=off&q={{ event.linkname }}"><h3>{{ event.name }}</h3></a>
+    <p>{{ event.location.address }}</p>
+</div>
 
 
 <!-- BOOTSTRAP CAROUSEL-->
