--- a/templates/cities.html
+++ b/templates/cities.html
@@ -9,10 +9,6 @@
             </p>
             
             <p>Current Temperature: {{ weather.main.temp | fahrenheit }} &#176;F</p>
-            
-            <div class="slider" ng-repeat="img in images track by $index">
-                <img ng-src= "{{ img.display_sizes[0].uri }}" />
-            </div>
         </div>
         
     </div>
@@ -20,6 +16,12 @@
 
 <h2>Average High + Average Lows (Each Month)</h2>
 <canvas id="myChart" width="740" height="200"></canvas>
+
+
+<div ng-repeat="event in events track by $index">
+    <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#safe=off&q={{ event.linkname }}"><h3>{{ event.name }}</h3></a>
+    <p>{{ event.location.address }}, {{ event.location.city }}, {{ event.location.state }}</p>
+</div>
 
 
 <!-- BOOTSTRAP CAROUSEL-->
