--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,10 @@
 
 <div class="content">
     <div class="leftFrame">
-        <div class="scrap">
-            <img src="../resource/slate.png" class="slate"/>
-            <h1 class="homeTitle textFloat">When Should I Visit?</h1>
-            <h3 class="homeBy textFloat">A Project by:  Dylan Tran and<br> Andrew Caldwell</h3>
-            <p class="homeText  textFloat">Use the Polaroid Pictures to explore destinations across the United States.<br> Give it a Click!!!</p>
-        </div>    
+        <img src="../resource/slate.png" class="homeScrap"/>
+        <h1 class="homeTitle textFloat">When Should I Visit?</h1>
+        <h3 class="homeBy textFloat">A Project by:  Dylan Tran and<br> Andrew Caldwell</h3>
+        <p class="homeText  textFloat">Use the Polaroid Pictures to explore destinations across the United States.<br> Give it a Click!!!</p>
     </div>
     
     <div class="rightFrame">
