--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,24 +4,21 @@
 
 @import url(https://fonts.googleapis.com/css?family=Reenie+Beanie);
 
+// GENERAL ELEMENT RULES AND REFINEMENTS
+// USE OF !important TO OVERRIDE BOOTSTRAP
 body {
-    background-image: url('../resource/cork.jpg');
+    //background-image: url('../resource/cork.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0 0 5% 0;
-    
-    // TEXT CALLS
-    //font-family: 'Open Sans', sans-serif;
-    //font-family: 'Londrina Shadow', cursive;
 }
-
 main {
     position: relative;
     display: flex !important;
     flex-direction: column;
     width: 100%;
     //padding: 3% 0% 0% 3%;
-    //border: 2px solid yellow;
+    border: 2px solid yellow;
 }
 div {
     margin: 0;
@@ -53,27 +50,126 @@ a {
     color: darkgray !important;
     margin-left: 15px;
 }
-
 a:hover {
     color: blue !important;
     text-decoration: none !important;
 }
-// RULES BELOW FOR BASIC CONTENT BLOCKS
+//<= END GENERAL EL RULES
+
+
+// RULES BELOW FOR TEMPLATE LEVEL STRUCTURE BLOCKS - BLOCK BEHAVIOR AND FLOW
 .content {
     display: flex !important;
-    flex-direction: row;
+    flex-direction: row !important;
+    
+    border: 4px solid cyan;
 }
 
+.topFrame {
+    width: 100%;
+    //height: fixed size TBD
+    border: 4px solid green;
+    position: relative;
+}
+
+
+    //>>>>>>> MERGE DOWN - "SPLIT FRAME"
 .leftFrame {
     width: 50%;
-    //border: 4px solid red;
+    border: 4px solid red;
+    position: relative;
 }
 .rightFrame {
     width: 50%;
-    //border: 4px solid blue;
+    border: 4px solid blue;
+    position: relative;
+}
+    //<<<<<<< MERGE UP
+
+
+.bottomFrame {
+    width: 100%;
+    //height: fixed size TBD
+    border: 4px solid orange;
+    position: relative;
+}
+.setLeft {
+    margin-left: 5%;
 }
 
-// RULES BELOW FOR POLAROID SVG MAPS
+.setRight {
+    margin-left: 5%;
+}
+//<= END TEMPLATE STRUCTURE RULES
+
+
+// RULES FOR SCRAP PAPER BACKSPLASHES
+/*
+.scrapDiv {
+    position: relative;
+    
+}
+*/
+.homeScrap {
+    position: absolute;
+    width: 700px;
+    height: 620px;
+    left: 0;
+    top: -20px;
+}
+
+.paper {
+    position: absolute;
+    width: 650px;
+    height: 350px;
+    
+    right: 25px;
+    top: 0px;   
+}
+.yellowPad {
+    position: absolute;
+    width: 360px;
+    height: auto;
+}
+
+// BEHAVIOR RULES FOR TEXT ELEMENTS
+.textFloat {
+    position: relative;
+    z-index: 3;
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -ms-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+}
+.homeTitle {
+    top: 0px;
+    left: 30px;
+}
+.homeBy {
+    top: 20px;
+    left: 40px;
+    width: 60%;
+}
+.homeText {
+    top: 40px;
+    left: 40px;
+    width: 60%;
+}
+.stateTitle {
+    position: relative;
+    text-align: right;
+    z-index: 3;
+    top: 100px;
+    right: 110px;
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+}
+//<= END TEXT EL RULES
+
+
+// RULES SPECIFIC TO POLAROID SVG MAP CONTAINER
 .polaroid {
     display: block;
     align-items: center;
@@ -101,66 +197,10 @@ a:hover {
     text-align: center;
     padding-top: 10px;
 }
-// RULES BELOW FOR RIGHT SIDE CONTENT BLOCK
-
-.scrap {
-    position: relative;
-    
-}
-.slate {
-    position: absolute;
-    width: 700px;
-    height: 620px;
-    left: 0;
-    top: -20px;
-}
-.textFloat {
-    position: relative;
-    z-index: 3;
-    -webkit-transform: rotate(-5deg);
-    -moz-transform: rotate(-5deg);
-    -ms-transform: rotate(-5deg);
-    -o-transform: rotate(-5deg);
-}
-.homeTitle {
-    top: 0px;
-    left: 30px;
-}
-.homeBy {
-    top: 20px;
-    left: 40px;
-    width: 60%;
-}
-.homeText {
-    top: 40px;
-    left: 40px;
-    width: 60%;
-}
-.paper {
-    position: absolute;
-    width: 650px;
-    height: 350px;
-    
-    right: 25px;
-    top: 0px;
-    
-}
-.stateTitle {
-    position: relative;
-    text-align: right;
-    z-index: 3;
-    top: 100px;
-    right: 110px;
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-}
+//<= END POLAROID RULES
 
 
-
-// RULES BELOW FOR CLIP PATH IMAGE
-// APPEARS IN STATE VIEW ONLY
+// RULES SPECIFIC TO CLIP PATH POLAROID COLLAGE
 .collage {
     background-color: black;
     -webkit-transform: rotate(-3deg);
@@ -188,11 +228,10 @@ a:hover {
     -webkit-clip-path: url("#clip-polygon");
     clip-path: url("#clip-polygon");
 }
+//<= END CLIP PATH RULES
 
 
-
-
-// RULES BELOW PIN POSITIONINGS
+// RULES GOVERNING PUSH PIN POSITIONINGS
 // h Pins for HOME VIEW
 // s Pins for STATE VIEW
 // c Pins for CITY VIEW
@@ -203,6 +242,7 @@ a:hover {
     z-index: 10;
 }
 
+// HOME VIEW PINS
 .hA {
     top: 15px;
     left: 110px;
@@ -218,6 +258,7 @@ a:hover {
     right: 360px;
 }
 
+// STATE VIEW PINS
 .sA {
     top: 40px;
     left: 300px;
@@ -244,10 +285,18 @@ a:hover {
     right: 85px;
 }
 
+// CITIES VIEW PINS
+.cA {}
+.cB {}
+.cC {}
+.cD {}
+.cE {}
+.cF {}
+//<= END PIN RULES 
 
 
-
-// RULES BELOW FOR SVG MAPS ONLY
+// RULES SPECIFIC TO SVG MAP RENDERING
+// NAMING SOMEWHAT LESS CONVENTIONAL
 .ocean {
     fill: #01053E;
     stroke: none;
