--- a/templates/states.html
+++ b/templates/states.html
@@ -6,14 +6,14 @@
 <img src="../resource/pin.png" class="pin sF">
 
 <div class="content">
-    <div class="leftFrame">
+    <div class="split50Frame">
         <div class="polaroid">
             <div class="mapFrame" svg-state></div>
             <h2 class="display"> {{ display }} </h2>
         </div>
     </div>    
 
-    <div class="rightFrame">
+    <div class="split50Frame">
         <img src="../resource/paper.png" class="paper"/>
         <h1 class="stateTitle textFloat">{{ state }}</h1>
     </div>  
