--- a/templates/states.html
+++ b/templates/states.html
@@ -14,7 +14,7 @@
     </div>    
 
     <div class="split50Frame">
-        <img src="../resource/paper.png" class="paper"/>
+        <img src="../resource/paper.png" class="stateScrap"/>
         <h1 class="stateTitle textFloat">{{ state }}</h1>
     </div>  
 
